# execheck

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
docs/: LIBRARY_USAGE.md
examples/: README.md  advanced_filtering.rs  custom_filter.rs  directory_scan.rs  fat_binary_analysis.rs  json_output.rs  simple_analysis.rs
src/: checks.rs  lib.rs  main.rs  output.rs
