[package]
name = "execheck"
version = "0.2.0"
edition = "2021"
description = "Multi-platform executable security checker for Linux (ELF), Windows (PE), and macOS (Mach-O)"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/kost/execheck"
keywords = ["security", "elf", "pe", "macho", "binary-analysis"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Vlatko Kosturjak"]

[[bin]]
name = "execheck"
path = "src/main.rs"

[lib]
name = "execheck"
path = "src/lib.rs"

[dependencies]
goblin = "0.8"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = { version = "0.36", features = ["serialize"] }
csv = "1.3"
walkdir = "2.5"
colored = "2.0"


